# fullstack/server/Application/Interfaces/IBookingService.cs
@@ -1,3 +1,4 @@
+using Application.Models.Dtos.Availability;
 using Application.Models.Dtos.Booking;
 
 namespace Application.Interfaces;
@@ -7,4 +8,6 @@ public interface IBookingService
     public BookingResponseDto CreateBooking(BookingCreateRequestDto dto);
 
     public BookingResponseDto DeleteBooking(string id);
+    
+    public List<AvailabiltySlotsDto> GetAvailabilitySlots(string serviceId);
 }
