# fullstack/server/Application/Models/Dtos/Availability/AvailabiltySlotsDto.cs
@@ -1,0 +1,8 @@
+namespace Application.Models.Dtos.Availability;
+
+public class AvailabiltySlotsDto
+{
+    public string Date { get; set; } = null!;
+    public TimeOnly StartTime { get; set; }
+    public TimeOnly EndTime { get; set; }
+}
