# fullstack/server/Application/Services/BookingService.cs
@@ -1,6 +1,7 @@
 using Application.Interfaces;
 using Application.Interfaces.Infrastructure.Postgres;
 using Application.Models;
+using Application.Models.Dtos.Availability;
 using Application.Models.Dtos.Booking;
 using Core.Domain.Entities;
 using Microsoft.Extensions.Options;
@@ -68,5 +69,42 @@ public class BookingService(IBookingDataRepository bookingRepository, IAvailabil
         {
             Message = "Booking deleted successfully",
         };
+    }
+
+    public List<AvailabiltySlotsDto> GetAvailabilitySlots(string serviceId)
+    {
+        var today = DateTime.Today;
+        var availabilitySlots = new List<AvailabiltySlotsDto>();
+
+        for (int i = 0; i < 7; i++)
+        {
+            var date = today.AddDays(i);
+            int dayOfWeek = (int)date.DayOfWeek;
+            var availability = availabilityRepository.GetAvailabilityForServiceAndDay(serviceId, dayOfWeek);
+
+            if (availability == null)
+                continue;
+
+            var slotStart = availability.AvailableFrom;
+            var slotEnd = availability.AvailableTo;
+
+            for (var time = slotStart; time < slotEnd; time = time.AddHours(1))
+            {
+                var slotDateTime = date.Add(time.ToTimeSpan());
+                
+                if (i == 0 && slotDateTime < DateTime.Now)
+                    continue;
+
+                availabilitySlots.Add(new AvailabiltySlotsDto
+                {
+                    Date = date.ToString("dd-MM-yyyy"),
+                    StartTime = time,
+                    EndTime = time.AddHours(1)
+                });
+            }
+        }
+
+        return availabilitySlots;
+        
     }
 }
